FileTools.getCharset(): close BufferedInputStream