@@ -164,11 +164,12 @@ public final class FileTools {
      */
     public static String getCharset(InputStream input) throws IOException {
         CharsetDetector cd = new CharsetDetector();
-        BufferedInputStream bis = new BufferedInputStream(input);
-        cd.setText(bis);
-        CharsetMatch cm = cd.detect();
-        if (cm != null) {
-            return cm.getName();
+        try (BufferedInputStream bis = new BufferedInputStream(input)) {
+            cd.setText(bis);
+            CharsetMatch cm = cd.detect();
+            if (cm != null) {
+                return cm.getName();
+            }
         }
 
         return null;
@@ -685,7 +686,7 @@ public final class FileTools {
         if (urlStringLocal.contains(":")) {
             try {
                 // logger.trace("url string: {}", urlString); //NOSONAR Debug
-                URL url = new URL(urlStringLocal);
+                URL url = new URI(urlStringLocal).toURL();
                 URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(),
                         url.getQuery(), url.getRef());
                 if (urlStringLocal.endsWith("/") && Paths.get(uri.getPath()).getFileName().toString().contains(".")) {
